# clihub

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  bunfig.toml  install.sh  package.json  tsconfig.json
.github/workflows/: desktop-release.yml  docker.yml  release.yml  test.yml
clihub-desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clihub-desktop/scripts/: build-sidecar.mjs
clihub-desktop/src/: App.svelte  Launcher.svelte  Main.svelte  Popover.svelte  app.css  main.ts  vite-env.d.ts
clihub-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
clihub-desktop/src-tauri/capabilities/: default.json
clihub-desktop/src-tauri/icons/: icon.icns
clihub-desktop/src-tauri/src/: lib.rs
docs/: 00-VISION.md  01-ARCHITECTURE.md  02-CLI-COMMANDS.md  03-TUI-FLOW.md  04-TOOL-PROVIDERS.md  05-CLIHUB-SKILL.md  06-SKILL-CROSS-TOOL.md  07-I18N.md  08-SKILL-CATALOG.md  09-DISTRIBUTION.md  10-SECURITY-BACKUP.md  11-ROADMAP.md  12-TESTING.md  13-MONETIZATION.md  14-SPRINT.md  15-SKILL-MD.md  16-LAUNCH.md  17-INFRA-PILLARS.md  18-CONFIG-PROXY-PROFILE.md  19-CLIHUBYAML.md  20-COMPETITIVE.md  20-MARKET-RESEARCH.md  21-VALUE.md  22-GATEWAY-SECURITY.md  22-GATEWAY-SECURITY.zh.md  23-ARCHITECTURE.md  23-ARCHITECTURE.zh.md  24-VERSION-PLAN.md  25-PROVIDER-BINDING.md  26-GATEWAY-DESIGN.md  26-GATEWAY-DESIGN.zh.md  27-CN-CLI-ACP-SUPPORT.md  README.md  REVIEW.md
docs/assets/: README.md
docs/spec/: 01-PROVIDER-SPEC.md  02-LOCKFILE.md  03-OAUTH-FLOW.md  (+2 more)
scripts/: demo.sh  dev-test.sh  install.sh  test-install.sh
(+29 files in other folders)
